Poder editar el perfil y cambiar la contraseña

--- a/phpApp/app/Config/JoinChatConfig.ini
+++ b/phpApp/app/Config/JoinChatConfig.ini
@@ -1,3 +1,5 @@
 [Database]
 loginUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/LoginServlet?format=json"
 registerUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/RegistroServlet?format=json"
+editUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/ActualizarServlet?format=json"
+changePasswordUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/ActualizarPasswordServlet?format=json"
