--- a/phpApp/app/Config/JoinChatConfig.ini
+++ b/phpApp/app/Config/JoinChatConfig.ini
@@ -1,4 +1,27 @@
-[Database]
+[production_calad]
+kodingUrl = "kladfelipe.koding.io"
+loginUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/LoginServlet?format=json"
+registerUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/RegistroServlet?format=json"
+editUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/ActualizarServlet?format=json"
+changePasswordUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/ActualizarPasswordServlet?format=json"
+
+[production_joinner]
+kodingUrl = "negly14.koding.io"
+loginUrl = "http://unkk452f24b4.negly14.koding.io:8080/JoinChat1.1/LoginServlet?format=json"
+registerUrl = "http://unkk452f24b4.negly14.koding.io:8080/JoinChat1.1/RegistroServlet?format=json"
+editUrl = "http://unkk452f24b4.negly14.koding.io:8080/JoinChat1.1/ActualizarServlet?format=json"
+changePasswordUrl = "http://unkk452f24b4.negly14.koding.io:8080/JoinChat1.1/ActualizarPasswordServlet?format=json"
+
+[production_isabel]
+kodingUrl = "azul24.koding.io"
+loginUrl = "http://uakka468c67a.azul24.koding.io:8080/JoinChat1.1/LoginServlet?format=json"
+registerUrl = "http://uakka468c67a.azul24.koding.io:8080/JoinChat1.1/RegistroServlet?format=json"
+editUrl = "http://uakka468c67a.azul24.koding.io:8080/JoinChat1.1/ActualizarServlet?format=json"
+changePasswordUrl = "http://uakka468c67a.azul24.koding.io:8080/JoinChat1.1/ActualizarPasswordServlet?format=json"
+
+; DEVELOPMENT ES LA COPIA DE PRODUCTION_CALAD
+[development]
+kodingUrl = "kladfelipe.koding.io"
 loginUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/LoginServlet?format=json"
 registerUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/RegistroServlet?format=json"
 editUrl = "http://ukkk243641ca.kladfelipe.koding.io:8080/JoinChat1.1/ActualizarServlet?format=json"
