Agregar los datos de juancho al archivo de configuración

--- a/phpApp/app/Config/JoinChatConfig.ini
+++ b/phpApp/app/Config/JoinChatConfig.ini
@@ -19,6 +19,13 @@ registerUrl = "http://uakka468c67a.azul24.koding.io:8080/JoinChat1.1/RegistroSer
 editUrl = "http://uakka468c67a.azul24.koding.io:8080/JoinChat1.1/ActualizarServlet?format=json"
 changePasswordUrl = "http://uakka468c67a.azul24.koding.io:8080/JoinChat1.1/ActualizarPasswordServlet?format=json"
 
+[production_juancho]
+kodingUrl = "juanchoperez.koding.io"
+loginUrl = "http://ujkkfc924cec.juanchoperez.koding.io:8080/JoinChat1.1/LoginServlet?format=json"
+registerUrl = "http://ujkkfc924cec.juanchoperez.koding.io:8080/JoinChat1.1/RegistroServlet?format=json"
+editUrl = "http://ujkkfc924cec.juanchoperez.koding.io:8080/JoinChat1.1/ActualizarServlet?format=json"
+changePasswordUrl = "http://ujkkfc924cec.juanchoperez.koding.io:8080/JoinChat1.1/ActualizarPasswordServlet?format=json"
+
 ; DEVELOPMENT ES LA COPIA DE PRODUCTION_CALAD
 [development]
 kodingUrl = "kladfelipe.koding.io"
